Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59849

tst_QFileSelector::basicTest fails in macOS 10.12

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.9.0
    • 5.9.0 Beta 1
    • Core: I/O
    • macOS 10.12
    • macOS
    • cdc5f47aeba94ba083a81dc681a09a351809e528

    Description

      /Users/qt/work/qt/qtbase/tests/auto/corelib/io/qfileselector/target_wrapper.sh  ./tst_qfileselectors basicTest
      ********* Start testing of tst_QFileSelector *********
      Config: Using QtTest library 5.9.0, Qt 5.9.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 8.0.0 (clang-800.0.42.1) (Apple))
      PASS   : tst_QFileSelector::initTestCase()
      FAIL!  : tst_QFileSelector::basicTest(platform1) Compared values are not the same
         Actual   (fs.select(testPath)): ":/platforms/+unix/+darwin/+mac/+osx/test"
         Expected (expectedPath)       : ":/platforms/+unix/+darwin/+mac/+osx/+macos/test"
         Loc: [tst_qfileselector.cpp(185)]
      FAIL!  : tst_QFileSelector::basicTest(platform2) Compared values are not the same
         Actual   (fs.select(testPath)): ":/platforms/+osx/test2"
         Expected (expectedPath)       : ":/platforms/+macos/test2"
         Loc: [tst_qfileselector.cpp(185)]
      PASS   : tst_QFileSelector::basicTest(platform3)
      PASS   : tst_QFileSelector::basicTest(custom1-noselector)
      PASS   : tst_QFileSelector::basicTest(custom1-withselector)
      PASS   : tst_QFileSelector::basicTest(customX-withselector-nofile)
      PASS   : tst_QFileSelector::basicTest(custom1-withselector-nobasefile)
      PASS   : tst_QFileSelector::basicTest(custom12)
      PASS   : tst_QFileSelector::basicTest(custom21)
      PASS   : tst_QFileSelector::basicTest(custom213)
      PASS   : tst_QFileSelector::basicTest(custom23)
      PASS   : tst_QFileSelector::basicTest(custom34nested)
      PASS   : tst_QFileSelector::basicTest(custom43nested)
      PASS   : tst_QFileSelector::basicTest(custom35conflict)
      PASS   : tst_QFileSelector::basicTest(relativePaths)
      PASS   : tst_QFileSelector::cleanupTestCase()
      Totals: 15 passed, 2 failed, 0 skipped, 0 blacklisted, 2ms
      ********* Finished testing of tst_QFileSelector *********
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              thiago Thiago Macieira
              tosaraja Tony Sarajärvi
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes